# EnlyzeWinCompatLib

./: CMakeLists.txt
cmake/: WinCompat.cmake
src/: CMakeLists.txt
